Code correction in Test Class