@@ -1,28 +1,42 @@
 package com.cinetime.service.user;
 
+import com.cinetime.entity.business.Role;
+import com.cinetime.entity.enums.RoleName;
 import com.cinetime.entity.user.User;
+import com.cinetime.exception.BadRequestException;
 import com.cinetime.exception.ConflictException;
 import com.cinetime.exception.ResourceNotFoundException;
 import com.cinetime.payload.mappers.UserMapper;
+import com.cinetime.payload.messages.ErrorMessages;
+import com.cinetime.payload.messages.SuccessMessages;
+import com.cinetime.payload.request.user.ResetPasswordRequest;
+import com.cinetime.payload.request.user.UserRegisterRequest;
 import com.cinetime.payload.request.user.UserUpdateRequest;
+import com.cinetime.payload.response.business.ResponseMessage;
 import com.cinetime.payload.response.user.UserResponse;
+import com.cinetime.repository.user.RoleRepository;
 import com.cinetime.repository.user.UserRepository;
+import com.cinetime.service.helper.MailHelper;
+import com.cinetime.service.helper.SecurityHelper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.*;
-
-import org.springframework.data.domain.*;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
+import org.springframework.security.authentication.TestingAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 public class UserService_GetAllUsers_Test {
@@ -30,29 +44,46 @@ public class UserService_GetAllUsers_Test {
     private UserRepository userRepository;
 
     @Mock
+    private RoleRepository roleRepository;
+
+    @Mock
     private PasswordEncoder encoder;
+
+    @Mock
+    private SecurityHelper securityHelper;
+
+    @Mock
+    private MailHelper mailHelper;
 
     @InjectMocks
     private UserService userService;
 
+    private User testUser;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+
+        testUser = new User();
+        testUser.setId(1L);
+        testUser.setEmail("test@cinetime.com");
+        testUser.setPassword("encodedPass");
+        testUser.setBuiltIn(false);
+
+        SecurityContextHolder.getContext().setAuthentication(
+                new TestingAuthenticationToken("test@cinetime.com", "password")
+        );
     }
 
     // ---------------- U09 - Get All Users ----------------
+    // U09 - getAllUsers
     @Test
-    void getAllUsers_ShouldReturnUserList() {
-        User user1 = new User();
-        User user2 = new User();
-        List<User> mockList = Arrays.asList(user1, user2);
+    void getAllUsers_ShouldReturnMappedList() {
+        when(userRepository.findAll()).thenReturn(List.of(testUser));
 
-        when(userRepository.findAll()).thenReturn(mockList);
+        List<UserResponse> result = userService.getAllUsers();
 
-        var result = userService.getAllUsers();
-
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        verify(userRepository).findAll();
+        assertEquals(1, result.size());
+        assertEquals(testUser.getEmail(), result.get(0).getEmail());
     }
 }
